[package]
name = "alien_temple"
version = "0.1.0"
edition = "2021"
authors = ["Axlefublr"]
license = "MIT"
description = "Track the music you constantly discover in a weirdly specific way"
readme = "README.md"
homepage = "https://github.com/Axlefublr/alien_temple"
repository = "https://github.com/Axlefublr/alien_temple"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.29"
clap = { version = "4.4.2", features = ["derive"] }
