[package]
name = "alien_temple"
version = "0.2.0"
edition = "2021"
authors = ["Axlefublr"]
license = "MIT"
description = "This program is so hyperspecific to me that I'm not going to even try to make it work for others."
readme = "README.md"
homepage = "https://github.com/Axlefublr/alien_temple"
repository = "https://github.com/Axlefublr/alien_temple"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.29"
clap = { version = "4.4.2", features = ["derive"] }
regex = "1.9.5"
